--- a/page.html
+++ b/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="animated fadeIn">
 <head>
-	<title>Samarth Halyal</title>
+	<title>Online-Story-Generator</title>
 	<link href="https://fonts.googleapis.com/css?family=Euphoria+Script|Poppins|Amatic+SC|Encode+Sans+Condensed" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
